fixed sequential, merged conserved